<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BART Runner</string>
    <string name="favorite_routes">Favorite routes</string>
    <string name="empty_favorites_list_message">No favorite routes have been added yet</string>
    <string name="loading_message">Loading, please wait&#8230;</string>
    <string name="add_route">Add a route</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="station_pair_description">%1$s to %2$s</string>
    <string name="save">Save</string>
    <string name="error_matching_origin_and_destination">The origin and destination stations must be
        different</string>
    <string name="error_null_destination">You must select a destination station</string>
    <string name="error_null_origin">You must select an origin station</string>
    <string name="departure_wait_message">Please wait while real time departure data is
        loaded</string>
    <string name="no_data_message">No departure data is currently available for this
        route. Note that this route may require a non-standard transfer due to
        a temporary change in service. Check for service advisories posted at
        http://m.bart.gov/schedules/advisories/</string>
    <string name="view">View</string>
    <string name="view_departures">View departures</string>
    <string name="missing_departure">Missing/inaccurate departure? Feature request? Please report to bartrunner@dougkeen.com</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="view_on_bart_site">View details on BART site</string>
    <string name="could_not_connect">Could not connect to BART services. Please try
        again later.</string>
    <string name="also_add_return_route">Also add return route</string>
    <string name="view_system_map">View system map</string>
    <string name="system_map">System map</string>
    <string name="departures">Departures</string>
    <string name="ok">OK</string>
    <string name="quick_departure_lookup">Quick departure lookup</string>
    <string name="getting_on_this_train">I will board this train</string>
    <string name="departure_options">Departure options</string>
    <string name="your_train">Your train</string>
    <string name="set_up_departure_alarm">Set alarm</string>
    <string name="train_alarm_text">Your train is leaving soon!</string>
    <string name="silence_alarm">Silence alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="leaving">Leaving</string>
    <string name="departed">Departed</string>
    <string name="arrives_at_destination">Arrive around\u00A0</string>
    <string name="arrival_message">I\'ll be arriving at %1$s around %2$s</string>
    <string name="share_arrival_time">Share arrival time</string>
    <string name="minutes_before_departure">minutes before departure</string>
    <string name="notification_channel_id">BART_Runner_notifications</string>
    <string name="notification_channel_name">BART Runner departure notifications</string>
    <string name="snackbar_route_deleted">Route deleted.</string>
    <string name="undo">Undo</string>
    <string name="shortcuts_map_short_label">BART Map</string>
    <string name="shortcuts_map_long_label">View BART system map</string>
</resources>
