<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/cancel_alarm_button"
        android:icon="@drawable/ic_action_cancel_alarm"
        android:title="@string/cancel_alarm"
        android:visible="false"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/set_alarm_button"
        android:icon="@drawable/ic_action_alarm"
        android:title="@string/set_alarm"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/share_arrival"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share_arrival_time"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="always|withText"
        />

</menu>
