<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:gravity="center_vertical">

    <View
        android:id="@+id/titleDivider"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignParentTop="true"
        android:background="#ff33b5e5" />

    <Spinner
        android:id="@+id/origin_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/titleDivider"
        android:drawSelectorOnTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dip"
        />

    <TextView
        android:id="@+id/origin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/origin_spinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/titleDivider"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dip"
        android:text="@string/origin"
        android:textSize="15sp"></TextView>

    <Spinner
        android:id="@+id/destination_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/origin_spinner"
        android:drawSelectorOnTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dip"
        />

    <TextView
        android:id="@+id/destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/destination_spinner"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/origin_spinner"
        android:gravity="center_vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="15dip"
        android:text="@string/destination"
        android:textSize="15sp"></TextView>

    <CheckBox
        android:id="@+id/return_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destination_spinner"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:text="@string/also_add_return_route"
        android:visibility="gone" />

</RelativeLayout>
